Fixed  a lot of styling issues for width and overflow

--- a/real-estate-club-angular/src/app/app.component.css
+++ b/real-estate-club-angular/src/app/app.component.css
@@ -6,8 +6,6 @@
   color: white;
 }
 
-
-
 .rrec-nav-link {
   font-size: 24px;
   text-decoration: none;
@@ -26,7 +24,6 @@
   }
 
   .rrec-links {
-    visibility: hidden;
-    width: 0px;
+    display: none;
   }
 }
