--- a/real-estate-club-angular/src/app/pages/executives/executives.component.css
+++ b/real-estate-club-angular/src/app/pages/executives/executives.component.css
@@ -1,5 +1,4 @@
 .rrec-executives {
   background: #404040;
   color: white;
-  overflow-y: scroll;
 }
