--- a/real-estate-club-angular/src/app/pages/upcoming-events/upcoming-events.component.css
+++ b/real-estate-club-angular/src/app/pages/upcoming-events/upcoming-events.component.css
@@ -2,7 +2,6 @@
   background-color: white;
   /* background-color: rgb(26, 26, 26, 0.8); */
   color: black;
-  overflow-y: scroll;
 }
 
 .rrec-upcoming-events-window {
